--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "firebase": "^10.10.0",
     "i18next": "^23.10.1",
     "nodemailer": "^6.9.12",
     "react": "^18.2.0",
